--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,21 +47,28 @@
 }
 
 .gallery-link {
-    position: relative;
-    display: block;
-    height: 100%;
-    border: 1px solid #808080;
+  position: relative;
+  display: block;
+  height: 100%;
+  border: 1px solid #808080;
 }
 
 .gallery-card-info {
-    display: flex;
-    justify-content: space-around;
-    position: absolute;
-    bottom: 0;
-    background-color: #fff;
-    width: 100%;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  bottom: 0;
+  background-color: #fff;
+  width: 100%;
 }
 
 .gallery-card-info li {
-    text-align: center;
+  text-align: center;
+}
+
+.load-more {
+  margin: 20px auto;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: block;
 }
